--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 uri.protocol=wss://
-uri.host=api.huobi.pro
+uri.host=api.hadax.com
 uri.port=443
-uri.path=/ws/v1
+uri.path=/ws
 
 accessKey=XXXXXXXX-XXXXXXXX-XXXXXXXX-XXXXX
 secretKey=XXXXXXXX-XXXXXXXX-XXXXXXXX-XXXXX
